--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
+        <activity android:name=".PracticalTest01Var03SecondaryActivity">
+            <intent-filter>
+                <action android:name="ro.pub.cs.systems.eim.lab3.myapplication.intent.action.PracticalTest01Var03SecondaryActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity android:name=".PracticalTest01Var03">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
